played around with header and nav

--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Gumiho - The Nine-Tailed Fox</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <header>
-            <h1>Gumiho, the Korean Nine-Tailed Fox</h1>
-            <nav>
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#media">Media</a></li>
-                </ul>
-            </nav>
-        </header>
 
-    </body>
+<head>
+    <meta charset="utf-8">
+    <title>구미호 - The Nine-Tailed Fox</title>
+    <link rel="stylesheet" href="css/style.css">
+</head>
+
+<body>
+    <header>
+        <div class="content-wrapper">
+            <h1>Gumiho, the Korean Nine-Tailed Fox</h1>
+            <div class="header-nav">
+                <img src="img/double.jpg">
+                <div class="text-nav">
+                <p>Gumiho () - definition</p>
+                <nav>
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#media">Media</a></li>
+                        <li><a href="#resources">Resources</a>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </nav>
+            </div>
+            </div>
+        </div>
+    </header>
+</body>
+
 </html>
