changed from gumiho to mudang

--- a/index.html
+++ b/index.html
@@ -3,21 +3,21 @@
 
 <head>
     <meta charset="utf-8">
-    <title>구미호 - The Nine-Tailed Fox</title>
+    <title>무당 - Korean Shaman</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
-        <div class="content-wrapper">
-            <h1>Gumiho, the Korean Nine-Tailed Fox</h1>
+        <div class="header-wrapper">
+            <h1>Mudang, the Korean Shaman</h1>
             <div class="header-nav">
-                <img src="img/double.jpg">
+                <img src="img/Hyewon-Munyeo.sinmu.jpg">
                 <div class="text-nav">
-                <p>Gumiho () - definition</p>
+                <p>quote</p>
                 <nav>
                     <ul>
-                        <li><a href="#home">Home</a></li>
+                        <li><a href="#summary">Summary</a></li>
                         <li><a href="#media">Media</a></li>
                         <li><a href="#resources">Resources</a>
                         <li><a href="#contact">Contact</a></li>
@@ -27,6 +27,26 @@
             </div>
         </div>
     </header>
+    <main>
+        <section id="summary">
+            <h2>Mudang (무당)</h2>
+            <p>A term mostly used to describe female shamans, though male shamans can also be called mudang. This site is focused primarly on Korean female shamans.</p>
+
+        </section>
+        <section id="media">
+            <h2>Media</h2>
+            <p>the following is a list of media that features Korean shamans and shamanism.</p>
+
+        </section>
+
+        <section id="resources">
+
+        </section>
+
+        <section id="contact">
+
+        </section>
+    </main>
 </body>
 
 </html>
