--- a/index.html
+++ b/index.html
@@ -3,50 +3,25 @@
 
 <head>
     <meta charset="utf-8">
-    <title>무당 - Korean Shaman</title>
+    <title>Trick or Treat!</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Eater&family=Emilys+Candy&family=Nosifer&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <header>
-        <div class="header-wrapper">
-            <h1>Mudang, the Korean Shaman</h1>
-            <div class="header-nav">
-                <img src="img/Hyewon-Munyeo.sinmu.jpg">
-                <div class="text-nav">
-                <p>quote</p>
-                <nav>
-                    <ul>
-                        <li><a href="#summary">Summary</a></li>
-                        <li><a href="#media">Media</a></li>
-                        <li><a href="#resources">Resources</a>
-                        <li><a href="#contact">Contact</a></li>
-                    </ul>
-                </nav>
-            </div>
-            </div>
-        </div>
-    </header>
-    <main>
-        <section id="summary">
-            <h2>Mudang (무당)</h2>
-            <p>A term mostly used to describe female shamans, though male shamans can also be called mudang. This site is focused primarly on Korean female shamans.</p>
-
-        </section>
-        <section id="media">
-            <h2>Media</h2>
-            <p>the following is a list of media that features Korean shamans and shamanism.</p>
-
-        </section>
-
-        <section id="resources">
-
-        </section>
-
-        <section id="contact">
-
-        </section>
-    </main>
+    <div class="container">
+        <h1>Happy Halloween</h1>
+        <img src="img/door.jpg" alt="a green door with a skeleton decoration">
+        <p>Knock!</p>
+        <button id="halloween-btn"><span class="trick">TRICK</span> OR <span class="treat">TREAT</span></button>
+    </div>
+    <div class="boo">
+    </div>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
